# landuse-model

./: .gitignore  CLAUDE.md  DATA_FORMAT_GUIDE.md  NRI_DATA_CONVERSION_GUIDE.md  PR_7_REVIEW.md  PR_8_REVIEW.md  PR_9_CRITICAL_REVIEW.md  PR_REVIEW.md  README.md  THEORY.md  analyze_tree_crp_practices.py  cc_impact_landuse.R  check_broad_codes_detail.py  check_nri_codes.py  crp_enrollment_report.txt  crp_real_data_report.txt  crp_simulation_report.txt  estimate_logit_crop_forest.R  evaluate_parameters.py  logit_ame_crop_forest.R  metro_population_changes.R  nri-forest-ag-trends.ipynb  nri_data_explore.R  parameter_evaluation_corrected.csv  parameter_evaluation_results.csv  pyproject.toml  pytest.ini  test_crp_enrollment.py  test_forest_modeling.py  tree_crp_analysis_report.txt
.claude/: settings.local.json
archive/: metro_population_changes.R  mfx_urban.R  nri-forest-ag-trends.ipynb  nriChangesCounty.csv  nri_data_explore.R
crp_test_data/: crp_enrollment_by_lcc.csv  crp_summary.csv  crp_transitions.csv
docs/: CRP_ENROLLMENT_DOCUMENTATION.md  FOREST_MODELING_DOCUMENTATION.md  LCC_MODEL_DOCUMENTATION.md
examples/: lcc_only_model_example.py
reference/: nri17_csv_layout_050521.xlsx
results/: land_use_percentages.csv  land_use_time_series.csv
results_lcc_only/: estimation_data.pkl  landuse_models.pkl
rpa-landuse-proj/: Untitled.ipynb  rpa_proj_gee.ipynb
scripts/: evaluate_parameters_corrected.py  run_4cat_model.py  run_5cat_model.py  run_6cat_model.py  run_crp_with_real_data.py  simulate_crp_enrollment.py
test_data/: data_format_spec.json  population.csv  (+2 more)
(+48 files in other folders)
